v2016-05-29
  * Update themes

v2016-05-23
  * Update themes

v2016-05-09
  * Modify headers
  * Encode email address
  * Update themes

v2016-05-04.2
  * Modify post "为美好的世界献上祝福"
  * Add link CSDN
  * Update themes

v2016-05-04
  * New post "为美好的世界献上祝福"
  * Delete post "软件和世界，愚者的中二之语"
  * Modify "友情链接"
  * Modify themes/init.sh
  * Update themes

v2016-04-24
  * Update themes

v2016-04-23
  * Hello summer of 2016

v2016-04-22
  * Modify post "使用GPG签名Git提交和标签"

v2016-04-21
  * Modify page "About"
  * Modify init.sh

v2016-04-20
  * Modify page "About"
  * Modify author for this site
  * Modify init.sh
  * Update themes

v2016-04-19
  * Modify post "使用SSH反向隧道进行内网穿透"
  * Add push.sh
  * Update themes

v2016-04-18
  * Modify post "使用GPG签名Git提交和标签"
  * Update themes

v2016-04-17
  * New post "使用GPG签名Git提交和标签"

v2016-04-14
  * Modify thread key for duoshuo

v2016-04-13.2
  * Modify build scripts

v2016-04-13
  * Better build scripts
  * Update themes

v2016-04-02.4
  * Modify page 404

v2016-04-02.3
  * Modify page 404

v2016-04-02.2
  * Modify page 404

v2016-04-02
  * Modify "友情链接"

v2016-03-25
  * Modify post "计算IP、ICMP、TCP和UDP包的校验和"

v2016-03-22
  * New post "计算IP、ICMP、TCP和UDP包的校验和"

v2016-03-13
  * Update themes

v2016-03-05
  * Modify post "新年快乐"

v2016-03-04
  * Use color scheme yilia
  * Modify post "使用SSH反向隧道进行内网穿透"
  * Call themes/init.sh at build.sh

v2016-03-01
  * For a coming new summer
  * For sections of my life
  * Modify "友情链接"
  * Update node modules

v2016-02-22
  * Modify post "软件和世界，愚者的中二之语"
  * Modify "友情链接"

v2016-02-20
  * Use theme built-in Baidu Tongji
  * Add copyright for all posts
  * Update some node modules

v2016-02-19.2
  * Modify init.sh

v2016-02-19
  * Add recent visitors on about page

v2016-02-18.2
  * Modify page "About"

v2016-02-18
  * Add categories for posts
  * Upgrade theme

v2016-02-17.2
  * Modify post "使用SSH反向隧道进行内网穿透"

v2016-02-17
  * New page "About"
  * New post "使用SSH反向隧道进行内网穿透"

v2016-02-12
  * Modify "友情链接"
