@@ -1,5 +1,5 @@
 # Theme Version | 当前版本
-Yelee: "3.0"
+Yelee: "3.5"
 
 # >>> Basic Setup | 基础设置 <<<
 
@@ -44,6 +44,8 @@ subnav:
   GitHub: "https://github.com/Arondight"
   CSDN: "http://blog.csdn.net/ispeller"
   虾米音乐: "http://www.xiami.com/u/6110365"
+  bilibili: "http://space.bilibili.com/1750509"
+  LOFTER: "http://eye.arondight.me"
   RSS: "/atom.xml"
   Email: "mailto:&#115;&#104;&#101;&#108;&#108;&#95;&#119;&#97;&#121;&#64;&#102;&#111;&#120;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;"
   #Email: "mailto:123@123.com"
@@ -57,8 +59,13 @@ subnav:
   #SegmentFault: ""
   #博客园: "cnblogs"
   #CSDN: ""
+  #Coding: ""
   #网易云音乐: "netease"
   #虾米音乐: "xiami"
+  #bilibili: ""
+  #AcFun: ""
+  #niconico: ""
+  #Quora: ""
   #Facebook: "#"
   #Google: "#"
   #Twitter: "#"
@@ -70,6 +77,7 @@ subnav:
   #CodePen: ""
   #Plunker: ""
   #Instagram: "#"
+  #LOFTER: ""
   #Flickr: "#"
   #reddit: ""
   #Medium: ""
@@ -80,6 +88,10 @@ subnav:
 # >>> Conments 评论系统 <<<
 # Chose ONE as your comment system and keep others disable.
 # 选一个作为网站评论系统，其他保持禁用。
+
+preload_comment: true
+## false: 当点击评论条等区域时再加载评论模块
+## false: load comment's section until u click/hover on the bar/icon
 
 disqus:
   #on: true
@@ -190,9 +202,21 @@ friends:
 aboutme: 他即将迎来一个夹杂着沉淀物的夏天
 #aboutme: false
 
-# 是否在新窗口打开链接
-# Open ALL link in a new tab
-open_in_new: false
+# Open link in a new tab | 是否在新窗口打开链接
+## `global` 0: Set separately, 1: Open all in new 2: Open all in current
+## `global` 0: 分开设置, 1: 全部在新标签打开, 2: 全部在"当前"标签打开
+open_in_new:
+  global: 0 # 0-2
+  title: false # article title in homepage 主页文章标题
+  post: false # link within post/page 正文中的链接
+  tags: false # 标签
+  categories: false # 分类
+  article_nav: false # 导航
+  archives: false # 归档
+  mini_archives: true # 迷你归档
+  menu: false # 边栏菜单
+  friends: true  # 友情链接
+  socail: true # 社交图标
 
 # Customize feed link 自定义订阅地址
 rss: /atom.xml
@@ -243,7 +267,8 @@ google_site:
 # Fill in Google Analytics tracking ID, #e.g. UA-XXXXX-X
 google_analytics: 'UA-72246506-1'
 
-# Add for Baidu Tongji
+# 百度统计 http://sitecenter.baidu.com/sc-web/
+# 查看代码，填入 //hm.baidu.com/hm.js? 之后的内容
 baidu_tongji: '55d7496b74b59fcaa2a67bd11b36a7b6'
 
 # 不蒜子网站计数设置
