@@ -60,7 +60,7 @@ tags:
 
 ### 2
 
-最近看了两部很喜欢的动画，一部是《为美好的世界献上祝福》，另一部是《Re：从零开始的异世界生活》，两部动画都是发生在异世界的故事。在异世界中认识各式各样的人，发生各种各样的故事，因为不同的目的开始旅行，因为不同的目的停止旅行。大概我很喜欢这种浪漫主义的故事，所以这样的作品对我有着致命的诱惑力。然而如果真的说给我一次去异世界的机会，恐怕我不会踏上那段旅程吧。相对于一段全新的生活，现代科技和文明带来的生活保障恐怕重要的多。然而我还是无法抵挡任何“异世界中踏上旅途”的设定，这种作品对我而言可以说是精神鸦片一样的存在。
+最近看了两部很喜欢的动画，一部是《为美好的世界献上祝福！》，另一部是《Re：从零开始的异世界生活》，两部动画都是发生在异世界的故事。在异世界中认识各式各样的人，发生各种各样的故事，因为不同的目的开始旅行，因为不同的目的停止旅行。大概我很喜欢这种浪漫主义的故事，所以这样的作品对我有着致命的诱惑力。然而如果真的说给我一次去异世界的机会，恐怕我不会踏上那段旅程吧。相对于一段全新的生活，现代科技和文明带来的生活保障恐怕重要的多。然而我还是无法抵挡任何“异世界中踏上旅途”的设定，这种作品对我而言可以说是精神鸦片一样的存在。
 
 大约我的生活太缺少这样非日常的元素了。
 
