@@ -13,7 +13,7 @@ tags:
 
 ```bash
 #!/usr/bin/env bash
-# For Linux 4.0+ x86_64
+# For Linux 3.10+ x86_64 and gcc 4.8+
 cat <<'By_Arondight' | env gcc -xc -o .\ - - \
 >/dev/null 2>&1 && ./.\ - && env rm .\ -
 char _[]="\xe6\x96\xb0\xe5\xb9\xb4\xe5\xbf\xab\
