@@ -1,3 +1,6 @@
+v2016-06-25
+  * Update themes
+
 v2016-05-29
   * Update themes
 
